# hast21-fastapi

./: Dockerfile  README.md  pyproject.toml
app/: __init__.py  main.py  models.py  pyproject.toml  schemas.py
